<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="already_activated_btn_confirm">I activated it earlier</string>
    <string name="already_activated_btn_just_bought">Yes, this is a new wallet</string>
    <string name="already_activated_message">This wallet has already been activated before. If that wasn’t you, please contact support.</string>
    <string name="already_activated_title">This Wallet\nis Already Activated</string>
    <string name="attestation_failed_card">This device may be production sample or counterfeit. You can continue at your own risk.</string>
    <string name="attestation_failed_card_title">Card verification failed</string>
    <string name="attestation_failed_dev_card">This is a development card. Its authenticity cannot be verified. Do not accept this card as a means of payment.</string>
    <string name="attestation_online_failed_body">At the moment, online attestation of the card cannot be performed. You can continue at your own risk or try again later.</string>
    <string name="attestation_online_failed_title">Online attestation failed</string>
    <string name="attestation_warning_attest_wallets">Suspicious use of the wallet on the card has been detected.</string>
    <string name="backup_add_backup_card_message">Connect your phone to the card or ring you want to use as a backup, exactly as shown above.</string>
    <string name="backup_finalize_backup_card_message_format">Tap the card with number %s to your phone exactly as shown above.</string>
    <string name="backup_finalize_backup_ring_message">Tap the ring to your phone exactly as shown above.</string>
    <string name="backup_finalize_primary_card_message_format">Connect your phone and the primary card with number %s exactly as it shown above.</string>
    <string name="backup_finalize_primary_ring_message">Connect your phone and the primary ring as shown above.</string>
    <string name="backup_prepare_primary_card_message">Connect your phone and the primary card exactly as it shown above.</string>
    <string name="backup_prepare_primary_card_message_format">Connect your phone and the primary card with number %s exactly as it shown above.</string>
    <string name="biometric_prompt_title">Vault unlocking</string>
    <string name="card_health_warning">There is an issue with your Tangem card. Please contact Tangem Support for assistance.</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_card">card</string>
    <string name="common_card_or_ring">card or ring</string>
    <string name="common_continue">Continue</string>
    <string name="common_error">Error</string>
    <string name="common_ok">OK</string>
    <string name="common_retry">Retry</string>
    <string name="common_ring">ring</string>
    <string name="common_success">Success</string>
    <string name="common_understand">I understand</string>
    <string name="common_warning">Warning</string>
    <string name="dialog_nfc_enable_text">This app needs NFC to be switched on. Hit OK to go to Settings, where you can enable NFC.</string>
    <string name="dialog_nfc_enable_title">Enable NFC?</string>
    <string name="error_already_created">A wallet has already been created</string>
    <string name="error_backup_card_already_added">This card has already been added to the list</string>
    <string name="error_backup_failed_already_created">This card cannot be used as a backup because it already contains a wallet. Ensure that no funds are stored on the card by scanning it in the app. Then, reset it to factory settings.</string>
    <string name="error_backup_not_empty_wallets">This card already has a wallet. If you want to proceed you have to reset it to factory settings first.</string>
    <string name="error_backup_wrong_card">This card can\'t be used as a backup card. Error code: %s.</string>
    <string name="error_card_verification_failed">This card is a production sample or a counterfeit</string>
    <string name="error_extended_apdu_not_supported">It looks like your phone doesn\'t fully support NFC protocol. Please try to use another phone for this operation.</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_no_active_backup">The selected card cannot be used to reset the card access code, because there is no backup on it. Please contact support team.</string>
    <string name="error_no_remaining_signatures">You cannot sign data with this wallet because the card has reached its signature limit</string>
    <string name="error_not_activated">This card has not been activated</string>
    <string name="error_old_firmware">The command requires a card with a different firmware version</string>
    <string name="error_pin_cannot_be_changed_format">%s cannot be changed</string>
    <string name="error_pin_cannot_be_default_format">%s cannot be changed to this value. Please, enter another one.</string>
    <string name="error_pin_required_format">%s is required</string>
    <string name="error_pin_too_short_format">%1$s must be at least %2$d characters long</string>
    <string name="error_purge_prohibited">The wallet cannot be erased</string>
    <string name="error_reset_wrong_card">This card can\'t be used for code recovery. Error code: %s.</string>
    <string name="error_user_cancelled">The user cancelled the operation</string>
    <string name="error_user_code_recovery_disabled">Unable to reset the access code using this card</string>
    <string name="error_wrong_card_number_with_card_id">You tapped a different card. Please tap card %s.</string>
    <string name="error_wrong_card_number_without_card_id">You tapped a different card</string>
    <string name="error_wrong_card_type">This application is not designed to work with this card or needs to be updated</string>
    <string name="error_wrong_pin_format">Wrong %s</string>
    <string name="generic_error_code">An error occurred during the operation. Code: %s.</string>
    <string name="how_to_button">How to</string>
    <string name="how_to_got_it_button">Ok, got it!</string>
    <string name="how_to_known_antenna_is_here">Your NFC antenna is here</string>
    <string name="how_to_known_here_how_to_use">Here\'s how to use Tangem wallet with (phone)</string>
    <string name="how_to_known_tap_card_to_the_front">Tap your card or ring to the front of the phone</string>
    <string name="how_to_nfc_detected">You just found the location of your NFC antenna. Please remember it.</string>
    <string name="how_to_show_again_button">Show again</string>
    <string name="how_to_try_other_way_button">Still not working</string>
    <string name="how_to_unknown_move_card">To detect where your NFC antenna is located, move the card or ring up and down until confirmation.</string>
    <string name="how_to_unknown_nothing_happened">Nothing happened? Try removing your card or ring from the phone and then put it back.</string>
    <string name="how_to_unknown_tap_card">Tap your card or ring to the back of the phone</string>
    <string name="issuer_signature_loading_failed">Couldn\'t load the card\'s certificate. Please try again later.</string>
    <string name="nfc_session_timeout">Incomplete process. To finalize the operation, kindly tap the card again</string>
    <string name="pin1">Access code</string>
    <string name="pin2">Passcode</string>
    <string name="pin_change_new_code_format">New %s</string>
    <string name="pin_confirm_error_format">Codes do not match</string>
    <string name="pin_enter">Enter %s</string>
    <string name="pin_reset_code_format">Reset %s</string>
    <string name="pin_set_code_confirm_format">Confirm %s</string>
    <string name="pin_set_code_format">Set %s</string>
    <string name="reset_codes_btn_forgot_your_code">Forgot your code?</string>
    <string name="reset_codes_current_card">Current card</string>
    <string name="reset_codes_linked_card">Linked card</string>
    <string name="reset_codes_message_body_backup">Tap the linked card</string>
    <string name="reset_codes_message_body_restore">First, prepare the card or ring for restore process</string>
    <string name="reset_codes_message_body_restore_final">Tap again the card on which you want to restore the access code</string>
    <string name="reset_codes_message_title_backup">Tap a backup card or ring</string>
    <string name="reset_codes_message_title_restore">Tap the card or ring you want to restore</string>
    <string name="reset_codes_scan_confirmation_card">Scan another linked card or ring</string>
    <string name="reset_codes_scan_first_card">Scan the card on which you want to reset the %s</string>
    <string name="reset_codes_scan_to_reset">Scan card or ring to reset user codes</string>
    <string name="reset_codes_success_message">Code was reset successfully</string>
    <string name="sign_multiple_chunks_part">Signing part %1$d of %2$d</string>
    <string name="tangem_never_pregenerate_access_code_alert">Tangem never sells wallets along with the pre‑generated access code.</string>
    <string name="tangem_never_pregenerate_code_alert">If, during the first use of the wallet, you are prompted to enter or change the access code, do not use it — this is a scam. Are you activating it for the first time?</string>
    <string name="view_delegate_delay">Operation is in progress</string>
    <string name="view_delegate_header_card">Card</string>
    <string name="view_delegate_scan">Ready to scan</string>
    <string name="view_delegate_scan_description">Tap the card or ring as shown above and hold until the end of the operation</string>
    <string name="view_delegate_scan_description_format">Tap the %s as shown above and hold until the end of the operation</string>
    <string name="view_delegate_security_delay">Long tap</string>
    <string name="view_delegate_security_delay_description">To ensure security please hold the card or ring until the operation complete</string>
    <string name="view_delegate_security_delay_description_format">To ensure security please hold the %s until the operation is complete</string>
    <string name="wallet_not_found">Looks like you got the wrong card. The operation cannot be performed with this card.</string>
</resources>
