<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llResetCodes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"

    >

    <View
        android:id="@+id/expandingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/leapfrog_views_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingTop="30dp"
            android:paddingEnd="16dp"
            android:paddingBottom="30dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_card_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/light_blue"
                android:elevation="1dp"
                android:text="@string/reset_codes_current_card"
                android:textColor="@color/sdk_background" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_card_linked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/medium_gray"
                android:elevation="1dp"
                android:text="@string/reset_codes_linked_card"
                android:textColor="@color/dark_gray" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/card_placeholder_primary" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/card_placeholder_secondary" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMessageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="@color/sdk_message_header"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Connect card and phone" />

            <TextView
                android:id="@+id/tvMessageSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textColor="@color/sdk_message_body"
                android:textSize="15sp" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/common_continue" />

    </LinearLayout>
</FrameLayout>
