<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clHowToKnown"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sdk_how_to_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <com.skyfishjy.library.RippleBackground
        android:id="@+id/rippleBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rb_color="@color/sdk_ripple_background"
        app:rb_duration="4000"
        app:rb_radius="40dp"
        app:rb_rippleAmount="4"
        app:rb_scale="4"
        app:rb_strokeWidth="20dp"
        app:rb_type="strokeRipple" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvNfcBadge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/imvPhone"
        app:layout_constraintEnd_toEndOf="@+id/imvPhone"
        app:layout_constraintStart_toStartOf="@+id/imvPhone"
        app:layout_constraintTop_toTopOf="@+id/imvPhone"
        app:srcCompat="@drawable/ic_nfc_badge" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone_mid"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvPhoneBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone_mid_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvHandWithCardH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/imvPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imvPhone"
        app:srcCompat="@drawable/hand_full_card_horizontal" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvHandWithCardV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/imvPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imvPhone"
        app:srcCompat="@drawable/hand_full_card_vertical" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvSuccess"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imvPhone"
        app:layout_constraintEnd_toEndOf="@+id/imvPhone"
        app:layout_constraintStart_toStartOf="@+id/imvPhone"
        app:layout_constraintTop_toTopOf="@+id/imvPhone"
        app:srcCompat="@drawable/ic_success_thin_anim" />

    <TextSwitcher
        android:id="@+id/tvHowToSwitcher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/flButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textColor="@color/sdk_how_to_text"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform"
            tools:text="lorem_ipsum_half" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textColor="@color/sdk_message_body"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform"
            tools:text="lorem_ipsum_half" />

    </TextSwitcher>

    <FrameLayout
        android:id="@+id/flButtonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSwitchMode"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/how_to_try_other_way_button"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowAgain"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/how_to_show_again_button"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="32dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/common_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
